<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Bandiago
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardCoinView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor">

            <TextView
                    android:id="@+id/assetSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_vertical|center|start"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
        </LinearLayout>

        <TextView
                android:id="@+id/titleAssetId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/assetid"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

        <TextView
                android:id="@+id/assetId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/titleAssetId"
                app:layout_constraintBottom_toBottomOf="@+id/titleAssetId"/>

        <TextView
                android:id="@+id/titleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/name"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleIssuer" android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/titleName"
                app:layout_constraintBottom_toBottomOf="@+id/titleName"/>

        <TextView
                android:id="@+id/titleIssueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/issue_date"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleName"/>

        <TextView
                android:id="@+id/issueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/titleIssueDate"
                app:layout_constraintBottom_toBottomOf="@+id/titleIssueDate"/>

        <TextView
                android:id="@+id/titleIssuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/issuer"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleAssetId"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/issuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleIssuer"
                app:layout_constraintTop_toTopOf="@+id/titleIssuer"/>

        <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/description"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDecimals"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/description"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleDecimals"/>


        <TextView
                android:id="@+id/titleDecimals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/decimals"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/titleReissuable"
        />

        <TextView
                android:id="@+id/decimals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/titleDecimals"
                app:layout_constraintBottom_toBottomOf="@+id/titleDecimals"/>

        <TextView
                android:id="@+id/titleReissuable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/reissuable"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/titleQuantity"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/reissuable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/titleReissuable"
                app:layout_constraintTop_toTopOf="@+id/titleReissuable"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/titleQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_vertical|center|end"
                android:gravity="center_vertical|end"
                android:textColor="@color/primaryColor"
                android:text="@string/quantity"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/titleIssueDate"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical|start"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/titleReissuable" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/titleQuantity"
                app:layout_constraintTop_toTopOf="@+id/titleQuantity"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
